--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 html,
 body {
+  background-color: hsl(226, 43%, 10%);
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
